списоки блокированных IP для модераторов